sprint 11 фикс для теста на получение популярных фильмов